<resources>
    <string name="app_name">SpaceAnalytiX</string>
    <string name="weight">Вес полезной нагрузки, кг</string>
    <string name="launch_count">Общее количество запусков</string>
    <string name="launch_failed">Количество аварийных запусков</string>
    <string name="launches">Список запусков</string>
    <string name="analytics">Аналитика</string>
    <string name="flight_number">Номер полета: </string>
    <string name="mission_name">Название миссии: </string>
    <string name="rocket_name">Название ракеты: </string>
    <string name="launch_date_utc">Дата запуска (UTC): </string>
    <string name="press_release">Пресс-релиз</string>
    <string name="wikipedia">Статья в Википедии</string>
    <string name="youtube">Видео на YouTube</string>
    <string name="launch_time">Момент старта</string>
    <string name="mission_description">Описание миссии</string>
    <string name="external_links">Внешние ссылки</string>
    <string name="article">Статья</string>
    <string name="mission_photo">Фотографии</string>
    <string name="launches_menu_item">Запуски</string>
    <string name="analytics_menu_item">Аналитика</string>
    <string name="settings_menu_item">Настройки</string>
    <string name="rocket_type">Тип ракеты:</string>
    <string name="launch_year">Год запуска:</string>
    <string name="launch_count_analytics">Количество запусков:</string>
    <string name="payload_weight_analytics">Масса полезной нагрузки:</string>
    <string name="pref_title">Настройки</string>
    <string name="unit_dialog_title">Выберите единицу измерения веса</string>
    <string name="unit_title">Единица измерения веса</string>
    <string name="unit_key">unit</string>
    <string name="about_title">О приложении</string>
    <string name="time_key">time_key</string>
    <string name="time_title">Локальное время</string>
    <string name="time_subtitle_on">Все временные отметки указываются в локальном часовом поясе</string>
    <string name="time_subtitle_off">Все временные отметки указываются в часовом поясе UTC</string>
    <string name="pictures_key">picture_key</string>
    <string name="pictures_title">Загружать изображения</string>
    <string name="pictures_subtitle_on">Разрешена загрузка изображений с высоким разрешенем (может вызвать существенный сетевой трафик)</string>
    <string name="pictures_subtitle_off">Запрещена загрузка изображений с высоким разрешенем (экономия трафика)</string>
    <string name="load_big_image_disable">Загрузка изображений отключена в настройках</string>
    <string name="country">Страна:</string>
    <string name="orbit">Орбита:</string>
    <string name="pie_chart_total">Всего</string>
</resources>
