<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_title">
    <ListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/unit_dialog_title"
        android:entries="@array/entries_unit"
        android:entryValues="@array/entryvalues_unit"
        android:key="@string/unit_key"
        android:title="@string/unit_title" />
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/time_key"
        android:title="@string/time_title" />

    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/pictures_key"
        android:title="@string/pictures_title" />

    <Preference android:title="@string/about_title">
        <intent />
    </Preference>
</PreferenceScreen>