<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data class="SearchFilterBinding">

        <variable
            name="SearchByRocketNameScopeName"
            type="String" />

        <variable
            name="SearchByYearScopeName"
            type="String" />

        <variable
            name="SearchByCountryScopeName"
            type="String" />

        <variable
            name="SearchByOrbitScopeName"
            type="String" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primaryColor"
            android:orientation="vertical"
            android:padding="@dimen/layout_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rocket_type"
                android:textColor="@color/colorWhite" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                bind:scopeName="@{SearchByRocketNameScopeName}" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/launch_year"
                android:textColor="@color/colorWhite" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                bind:scopeName="@{SearchByYearScopeName}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/country"
                android:textColor="@color/colorWhite" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                bind:scopeName="@{SearchByCountryScopeName}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:text="@string/orbit"
                android:textColor="@color/colorWhite" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                bind:scopeName="@{SearchByOrbitScopeName}" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>