<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.ivanovnv.spacex.LaunchFragment.LaunchItemViewModel" />
    </data>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        bind:imageUrl="@{vm.imageUrl}" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/layout_margin">

        <TextView
            android:id="@+id/tv_flight_number_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_number" />

        <TextView
            android:id="@+id/tv_flight_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_flight_number_hint"
            android:text="@{vm.flightNumber}" />


        <TextView
            android:id="@+id/tv_mission_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission_name"
            app:layout_constraintTop_toBottomOf="@id/tv_flight_number_hint" />

        <TextView
            android:id="@+id/tv_mission_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_mission_name_hint"
            app:layout_constraintTop_toTopOf="@id/tv_mission_name_hint"
            android:text="@{vm.missionName}" />

        <TextView
            android:id="@+id/tv_rocket_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rocket_name"
            app:layout_constraintTop_toBottomOf="@id/tv_mission_name_hint" />

        <TextView
            android:id="@+id/tv_rocket_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_rocket_name_hint"
            app:layout_constraintTop_toTopOf="@id/tv_rocket_name_hint"
            android:text="@{vm.rocketName}" />

        <TextView
            android:id="@+id/tv_launch_date_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_date_utc"
            app:layout_constraintTop_toBottomOf="@id/tv_rocket_name_hint" />

        <TextView
            android:id="@+id/tv_launch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tv_launch_date_hint"
            app:layout_constraintTop_toTopOf="@id/tv_launch_date_hint"
            android:textStyle="bold"
            android:maxLines="2"
            android:text="@{vm.launchDate}" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
</layout>