<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_mission_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="2dp"
                android:scaleType="centerInside" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/cl_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/layout_margin">

                <TextView
                    android:id="@+id/tv_flight_number_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flight_number" />

                <TextView
                    android:id="@+id/tv_flight_number"
                    app:layout_constraintStart_toEndOf="@id/tv_flight_number_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_mission_name_hint"
                    app:layout_constraintTop_toBottomOf="@id/tv_flight_number_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mission_name" />

                <TextView
                    android:id="@+id/tv_mission_name"
                    app:layout_constraintStart_toEndOf="@id/tv_mission_name_hint"
                    app:layout_constraintTop_toTopOf="@id/tv_mission_name_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_rocket_name_hint"
                    app:layout_constraintTop_toBottomOf="@id/tv_mission_name_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rocket_name" />

                <TextView
                    android:id="@+id/tv_rocket_name"
                    app:layout_constraintStart_toEndOf="@id/tv_rocket_name_hint"
                    app:layout_constraintTop_toTopOf="@id/tv_rocket_name_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_launch_date_hint"
                    app:layout_constraintTop_toBottomOf="@id/tv_rocket_name_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launch_date_utc" />

                <TextView
                    android:id="@+id/tv_launch_date"
                    app:layout_constraintStart_toEndOf="@id/tv_launch_date_hint"
                    app:layout_constraintTop_toTopOf="@id/tv_launch_date_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:textStyle="bold" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <!--<TextView-->
            <!--android:id="@+id/tv_details"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="@dimen/layout_margin" />-->

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdf_viewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</ScrollView>
